# kymata-core

./: .gitattributes  .gitignore  404.html  CITATION.cff  CODE_OF_CONDUCT.md  Jtest.out  Jtest.sh  LICENSE  README.md  ablation.py  ablation_test.py  cancel_jobs.sh  codecov.yml  combine_scatter.py  combine_scatter_all.py  combine_scatter_compare.py  combine_scatter_word_and_phone.py  combine_scatter_word_and_phone_all.py  combine_scatter_word_and_phone_interpret.py  combine_scatter_word_and_phone_interpret_v2.py  combine_scatter_word_and_phone_interpret_v3_syntax.py  combine_scatter_word_and_phone_interpret_v4_categories.py  combine_scatter_word_and_phone_interpret_v5_compare.py  combine_scatter_word_and_phone_interpret_v6_new_select.py  combine_scatter_word_and_phone_interpret_zoom.py  combine_scatter_word_and_phone_paper.py  compare_r_ecog_vs_emeg.py  convert_nkg_to_log.py  cw_convert_to_logs.sh  cw_plot_averages.sh  cw_scatter.sh  cw_split_meg_eeg_all_layers.sh  cy_plot_all.sh  get_feats.py  get_feats_logmel.py  get_feats_longform.py  get_feats_ru.py  get_feats_short.py  get_feats_teacher_forcing.py  get_trans.py  (+153 more)
assets/: overview_graphic.psd
batch_scripts/: submit_ablation.sh  submit_get_feats.sh  submit_get_feats_teacher_forcing.sh  submit_gridsearch_base_fc2_teacher.sh  submit_gridsearch_large-v2_fc2_teacher.sh  submit_gridsearch_large-v2_fc2_teacher_tvl.sh  submit_gridsearch_large_ru.sh  submit_gridsearch_medium_fc2_teacher.sh  submit_gridsearch_medium_fc2_teacher_tvl.sh  submit_gridsearch_phonetics_tvl.sh  submit_gridsearch_qwen_word_decoder_audio_english_russian.sh  submit_gridsearch_qwen_word_decoder_audio_russian.sh  submit_gridsearch_qwen_word_decoder_puretext_english.sh  submit_gridsearch_qwen_word_decoder_puretext_english_russian.sh  submit_gridsearch_qwen_word_decoder_puretext_russian.sh  submit_gridsearch_qwen_word_decoder_russian_single_participant.sh  submit_gridsearch_qwen_word_decoder_text_english.sh  submit_gridsearch_qwen_word_decoder_text_english_russian.sh  submit_gridsearch_qwen_word_decoder_text_english_russian_one.sh  submit_gridsearch_qwen_word_decoder_text_russian.sh  submit_gridsearch_qwen_word_ecog.sh  submit_gridsearch_qwen_word_ecog_encoder.sh  submit_gridsearch_qwen_word_encoder_english_russian.sh  submit_gridsearch_qwen_word_encoder_russian.sh  submit_gridsearch_ru_en.sh  submit_gridsearch_salmonn_13b_phone.sh  submit_gridsearch_salmonn_13b_single_neuron_phone.sh  submit_gridsearch_salmonn_13b_teacher.sh  submit_gridsearch_salmonn_13b_teacher_tvl.sh  submit_gridsearch_salmonn_7b_accent_teacher.sh  submit_gridsearch_salmonn_7b_morpheme_source_b5.sh  submit_gridsearch_salmonn_7b_phone.sh  submit_gridsearch_salmonn_7b_phone_select.sh  submit_gridsearch_salmonn_7b_phonetics.sh  submit_gridsearch_salmonn_7b_pronunciation.sh  submit_gridsearch_salmonn_7b_semantics.sh  submit_gridsearch_salmonn_7b_single_neuron_one.sh  submit_gridsearch_salmonn_7b_source.sh  submit_gridsearch_salmonn_7b_source_b2.sh  submit_gridsearch_salmonn_7b_source_b4.sh  (+22 more)
configs/: dataset4_config_file.yaml
dataset_config/: camcan.yaml  camcan_movie.yaml  camcan_story.yaml  dataset3.yaml  dataset3_new.yaml  dataset4.1.yaml  dataset4.yaml  dataset5.yaml  dataset_ecog.yaml  dataset_ecog_mean.yaml  forrestgump-meg.yaml  gwilliams_MEG-MASC.yaml  listen_imagine_speak.yaml  music.yaml  subject_name_recording_config (template).yaml
demos/: demo_gridsearch.py  demo_ippm.ipynb  demo_plotting.ipynb  demo_plotting.py  demo_preproc.py  demo_run_gridsearch.py  demo_save_load.ipynb  demo_save_load.py  test.py
docs/: IPPM.md  README_IPPM.md  getting-started.md  index.md  overview.md  reference.md  troubleshooting_cbu.md
getting-started/: index.html
invokers/: invoker_bids_check.py  invoker_convert_to_bids.py  invoker_create_trialwise_data.py  invoker_estimate_noise_cov_matrix.py  invoker_exp2log.py  invoker_expression_plot.py  invoker_load_morphmaps.py  invoker_preproc.py  invoker_preproc_pipeline.py  invoker_run_data_cleansing.py  invoker_run_hexel_current_estimation.py  invoker_run_nkg_plotting.py  run_fitted_gridsearch.py  run_gridsearch.py  run_gridsearch_bayesian.py  run_preprocessing_dataset3.py  run_preprocessing_dataset4.py  subproc_grid.py
kymata/: __init__.py
kymata-toolbox-data/: output_expression
logs/: .README.md  .gitignore
overrides/: home.html
overview/: index.html
reference/: index.html
scatter_scripts/: combine_scatter_all.py  combine_scatter_compare.py  combine_scatter_word_and_phone.py  combine_scatter_word_and_phone_all.py  combine_scatter_word_and_phone_interpret.py  combine_scatter_word_and_phone_interpret_v2.py  combine_scatter_word_and_phone_interpret_v3_syntax.py  combine_scatter_word_and_phone_interpret_v4_categories.py  combine_scatter_word_and_phone_interpret_v5_compare.py  combine_scatter_word_and_phone_interpret_v6_new_select.py  combine_scatter_word_and_phone_interpret_v7_regress.py  combine_scatter_word_and_phone_interpret_zoom.py  combine_scatter_word_and_phone_paper.py  combine_scatter_word_and_phone_paper_neurons.py  combine_scatter_word_and_phone_paper_v2_new_select.py
scripts/: NKG_create_item_list.pl  NKG_getSingleTrialEvokedSourceData.py  NKG_make_trials.py  NKG_reconall.sh  NKG_remove_ECG.py  NKG_setup.m  Version_details.txt  __init__.py  bem.py  bids.py  gridsearch.py  hexel_current_estimation.py  load_data.py  plotting.py  preprocessing.py  utils.py
scripts_/: gridsearch.py  pipeline.py  submit_gridsearch.sh
search/: search_index.json
stylesheets/: kymata-documentation.css
tests/: test_combinatorics.py  test_config.py  test_data_root_path.py  test_datasets.py  test_expression.py  test_expressionset.py  test_functions.py  test_io_audio.py  test_ippm_build.py  test_ippm_builder.py  test_ippm_clusterers_integration_tests.py  test_ippm_plot.py  (+29 more)
(+483 files in other folders)
